Fixed Sign In button on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -263,14 +263,7 @@ footer .socials {
 }
 
 @media (max-width:750px) {
-  .sign-btn-container {
-    display: none;
-  }
 
-  .navbar-container {
-    justify-content: center;
-    align-items: center;
-  }
 
   .guest {
     padding: 5rem;
@@ -297,6 +290,10 @@ footer .socials {
     gap: 0;
   }
 
+  .inc-exp-container {
+    margin-bottom: 0;
+  }
+
   .transactions-list,
   .add-transaction {
     max-width: 30rem;
@@ -313,6 +310,18 @@ footer .socials {
 }
 
 @media (max-width: 550px) {
+  .navbar-container {
+    padding: 0 1rem;
+  }
+
+  .logo {
+    padding-left: 1rem;
+  }
+
+  .navbar button {
+    padding: 0.5rem 1rem;
+  }
+
   .inc-exp-container {
     width: 20rem;
   }
@@ -324,8 +333,9 @@ footer .socials {
 }
 
 @media (max-width: 415px) {
-  .navbar-container {
-    padding: 0 3rem;
+
+  .logo {
+    font-size: 0.8rem;
   }
 
   .guest {
